# kombrucha

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  OPTIMIZATIONS.md  README.md  SECURITY.md  benchmark.sh  install.sh  release_notes.md  release_notes_v0.1.15.md  release_notes_v0.1.5.md
.github/workflows/: ci.yml  release-binaries.yml  release.yml  update-homebrew-tap.yml
ai/: BENCHMARKING_STRATEGY.md  CODE_REVIEW.md  CODE_REVIEW_2025_10_22.md  COMPATIBILITY_AUDIT.md  DECISIONS.md  FALLBACK_DESIGN.md  HOMEBREW_WORKAROUNDS.md  LIBRARY_API_SPEC.md  LINKED_VERSION_FIX.md  PERFORMANCE_PROFILE.md  PHASE_1.4_COMPLETION.md  PHASE_2_PLAN.md  PHASE_3_INTEGRATION_TESTING.md  PHASE_3_TEST_REPORT.md  PHASE_4_RELEASE.md  REAL_WORLD_TESTING.md  RESEARCH.md  SAFETY_VERIFICATION.md  STATUS.md  TESTING_ISSUES.md  TESTING_REMEDIATION.md  TODO.md  UX_AUDIT.md  bru-custom-tap-prebuilt-binaries.md  bug_custom_tap_install_failure.md
ai/research/: feasibility-assessment.md  homebrew-compatibility.md  research-conclusions.md
benches/: core_operations.rs
benchmarks/: FINDINGS.md  README.md  installation-workflows.sh  phase2-complex.sh  phase2-install.sh  phase2-results.md  real-world-workflows.sh
docs/: API-ROADMAP.md  COMMAND_MIGRATION.md  library-api.md
docs/architecture/: compatibility-requirements.md  feature-parity-audit.md  flag-audit.md  implementation-roadmap.md  testing-strategy.md
examples/: README.md  bottle_installation.rs  check_upgrades.rs  cleanup-test.rs  dependency_tree.rs  install-test.rs  integration-test.rs  list_installed.rs  query_formula.rs  search_packages.rs  upgrade-test.rs  workflow-test.rs
internal/: README.md  SESSION-FINAL-2025-10-21.md  SESSION-STATUS-2025-10-21.md  SPEC.md  command-output-audit.md  emoji-cleanup-systematic-approach.md  feature-parity-audit.md  flag-audit.md  homebrew-edge-cases.md  open-questions.md  performance-analysis.md  progress-implementation-plan.md  reality-check.md  research-findings.md  session-2025-10-21-edge-testing.md  session-summary-2025-10-21b.md  status-report.md  test-report.md  testing-strategy.md  ux-analysis.md  ux-improvements.md
scripts/: README.md  benchmark.sh  integration-test.rs  test-compatibility.sh  test-functional.sh  test-integration.sh  test-phase3.sh  test-quick.sh  test-smoke.sh
src/: api.rs  cache.rs  cask.rs  cellar.rs  colors.rs  commands.rs  commands_old.rs  download.rs  error.rs  extract.rs  lib.rs  main.rs  package_manager.rs  platform.rs  progress.rs  receipt.rs  relocate.rs  services.rs  symlink.rs  tap.rs
tests/: cleanup_tests.rs  integration_tests.rs  parallel_tests.rs  regression_tests.rs  relocation_tests.rs  symlink_integration_tests.rs  test_helpers.rs  unit_tests.rs
(+54 files in other folders)
