[package]
name = "bru"
version = "0.1.0"
edition = "2024"
authors = ["Nick <nijaru@users.noreply.github.com>"]
description = "A fast Homebrew-compatible package manager written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nijaru/kombrucha"
readme = "README.md"
keywords = ["homebrew", "package-manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# CLI & UX
clap = { version = "4", features = ["derive", "cargo"] }
indicatif = "0.17"
owo-colors = "4"

# Async & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
