[package]
name = "kombrucha"
version = "0.1.32"
edition = "2024"
authors = ["Nick <nijaru@users.noreply.github.com>"]
description = "Fast, parallel package manager compatible with Homebrew formulae"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nijaru/kombrucha"
homepage = "https://github.com/nijaru/kombrucha"
documentation = "https://github.com/nijaru/kombrucha#readme"
readme = "README.md"
keywords = ["homebrew", "package-manager", "cli", "macos", "bottles"]
categories = ["command-line-utilities"]
exclude = [
    "ai/*",
    "docs/*",
    "benchmarks/*",
    ".github/*",
    "scripts/*",
]

[[bin]]
name = "bru"
path = "src/main.rs"

[dependencies]
# CLI & UX
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"
indicatif = "0.17"
colored = "2"
term_size = "0.3"

# Async & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha2 = "0.10"

# Archive handling
tar = "0.4"
flate2 = "1"
walkdir = "2"
rayon = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & Time
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# In-memory caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
# Testing
tempfile = "3"
testcontainers = "0.23"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = true  # Enable debug symbols for profiling (doesn't affect performance)

[[bench]]
name = "core_operations"
harness = false
